# GCBM.Data

./: .gitignore  mojadata.sln  pyproject.toml
mojadata/: build_wheel.bat  mojadata.pyproj  pyproject.toml  setup.py
mojadata/mojadata/: arrowspacetiler2d.py  boundingbox.py  compressingtiler2d.py  compressingtiler3d.py  config.py  gdaltiler2d.py  passthroughgdaltiler2d.py  tiler.py
mojadata/mojadata/layer/: dummylayer.py  layer.py  rasterlayer.py  vectorlayer.py
mojadata/mojadata/layer/gcbm/: disturbancelayer.py  transitionrule.py  transitionrulemanager.py
mojadata/mojadata/util/: __init__.py  gdalhelper.py  ogrmerge.py  projecthelper.py  rasterclipper.py  validationhelper.py
