[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mojadata"
module-root = "mojadata"

[project]
name = "mojadata"
version = "4.3.7"
requires-python = ">= 3.9"
dependencies = [
    "gdal", "gdal_utils", "numpy", "simplejson", "future", "psutil",
    "six", "ftfy"
]

